--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_staggered_grid_view: ^0.6.2
   lottie: ^2.2.0
+  get: ^4.6.5
+  shimmer: ^2.0.0
+  dio: ^4.0.6
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
