--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   shimmer: ^2.0.0
   dio: ^4.0.6
   pull_to_refresh: ^2.0.0
+  shared_preferences: ^0.5.5
+  sqflite: ^2.2.3
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
