--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,13 @@ dependencies:
   shimmer: ^2.0.0
   dio: ^4.0.6
   pull_to_refresh: ^2.0.0
-  shared_preferences: ^0.5.5
   sqflite: ^2.2.3
   path: ^1.8.2
+  flutter_local_notifications: ^13.0.0
+  shared_preferences: ^0.5.5
+  rxdart: ^0.27.7
+  intl: ^0.18.0
+  android_alarm_manager_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
