--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   sqflite: ^2.2.3
   path: ^1.8.2
   flutter_local_notifications: ^13.0.0
-  shared_preferences: ^0.5.5
+  shared_preferences: ^2.0.17
   rxdart: ^0.27.7
   intl: ^0.18.0
   android_alarm_manager_plus: ^2.1.0
@@ -54,6 +54,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.3.2
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
