updated testing case & http req

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   lottie: ^2.2.0
   get: ^4.6.5
   shimmer: ^2.0.0
-  dio: ^4.0.6
   pull_to_refresh: ^2.0.0
   sqflite: ^2.2.3
   path: ^1.8.2
@@ -50,6 +49,7 @@ dependencies:
   rxdart: ^0.27.7
   intl: ^0.18.0
   android_alarm_manager_plus: ^2.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
